crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/typescript.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: typescript.js

---
# Input
```js
// https://babeljs.io/docs/en/babel-preset-typescript

const x: number = 0;

```

# Output
```js
// https://babeljs.io/docs/en/babel-preset-typescript

const x: number = 0;

```

# Errors
```
error[SyntaxError]: type annotation are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ typescript.js:3:8
  │
3 │ const x: number = 0;
  │        ^^^^^^^^ TypeScript only syntax


```


